# sklearn-serialize

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
sklearn_serialize/: __init__.py  equality.py  serialize.py
sklearn_serialize/serialize/: __init__.py  _core.py  _numpy.py  _pandas.py  _polars.py  _scipy.py  _sklearn.py
tests/: test_equality.py  test_integration.py  test_serialize.py
